--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -25,9 +25,17 @@
             <% end %>
           </ul>
         </li>
+        <% if current_user %>
+          <li>Signed in as <%= current_user.email %></li>
+          <li><%= link_to "Logout", '/logout' %></li>
+        <% else %>
+          <li><%= link_to 'Login', '/login' %></li>
+          <li><%= link_to 'Register', '/register' %></li>
+        <% end %>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li class="dropdown">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
