Fixed a navbar style

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,7 +26,7 @@
           </ul>
         </li>
         <% if current_user %>
-          <li>Signed in as <%= current_user.email %></li>
+          <li class="logged-user">Signed in as <%= current_user.email %></li>
           <li><%= link_to "Logout", '/logout' %></li>
         <% else %>
           <li><%= link_to 'Login', '/login' %></li>
