Added email to bottom of order confirmation

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -28,6 +28,14 @@
             <%= @cart_total %>
           </th>
         </tr>
+        <tr>
+          <th colspan="2">
+            EMAIL:
+          </th>
+          <th colspan="2">
+            <%= @order.email %>
+          </th>
+        </tr>
       </tfoot>
     </table>
   </div>
