--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,29 @@
 <h1>Register</h1>
 
 <%= form_for :user, url: '/users' do |f| %>
-
-  First Name: <%= f.text_field :first_name %><br>
-  Last Name: <%= f.text_field :last_name %><br>
-  Email: <%= f.text_field :email %><br>
-  Password: <%= f.password_field :password %><br>
-  Password Confirmation: <%= f.password_field :password_confirmation %><br>
-  <%= f.submit "Submit" %>
-
+<table>
+  <tr>
+    <td>First Name:</td> 
+    <td><%= f.text_field :first_name %></td>
+  </tr>
+  <tr>
+    <td>Last Name:</td> 
+    <td><%= f.text_field :last_name %></td>
+  </tr>
+  <tr>
+    <td>Email:</td> 
+    <td><%= f.text_field :email %></td>
+  </tr>
+  <tr>
+    <td>Password:</td> 
+    <td><%= f.password_field :password %></td>
+  </tr>
+  <tr>
+    <td>Password Confirmation:</td>
+    <td><%= f.password_field :password_confirmation %></td>
+  </tr>
+  <tr>
+    <td><%= f.submit "Submit" %></td>
+  </tr>
+</table>
 <% end %>
